k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: university-frontend-deployment
  labels:
    end: university-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      end: university-frontend
  template:
    metadata:
      labels:
        end: university-frontend
    spec:
      containers:
      - name: university-frontend
        image: borodun/university-frontend
        ports:
        - containerPort: 80
