k8s/backend-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: university-backend-cluster-ip
spec:
  type: ClusterIP
  selector:
    end: university-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
